# miniprojet

./: .replit  fichier.py  pyproject.toml  test_fichier.py
