[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["cgte <colin.goutte@free.fr>"]
description = ""
name = "miniprojet"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^5.4"
python = "^3.7"
pytest-cov = "^2.8"
[tool.poetry.dev-dependencies]
